--- a/VRBCI3000.csproj
+++ b/VRBCI3000.csproj
@@ -8,5 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Chickensoft.LogicBlocks" Version="5.12.0" />
     <PackageReference Include="Chickensoft.LogicBlocks.DiagramGenerator" Version="5.12.0" />
+    <PackageReference Include="SharpLSL" Version="0.0.10" />
+    <PackageReference Include="SharpLSL.Native.win-x64" Version="1.16.2.5" />
   </ItemGroup>
 </Project>
