--- a/VRBCI3000.csproj
+++ b/VRBCI3000.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Godot.NET.Sdk/4.4.1">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <EnableDynamicLoading>true</EnableDynamicLoading>
+    <EnableDynamicLoading>true</EnableDynamicLoading>    
+    <!-- Catch compiler-mismatch issues with the Introspection generator -->
+    <WarningsAsErrors>CS9057</WarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Chickensoft.Introspection.Generator" Version="3.0.0" />
+    <PackageReference Include="Chickensoft.Introspection.Generator" Version="3.0.0" PrivateAssets="all" OutputItemType="analyzer" />
     <PackageReference Include="Chickensoft.LogicBlocks" Version="5.18.0" />
-    <PackageReference Include="Chickensoft.LogicBlocks.DiagramGenerator" Version="5.12.0" />
+    <PackageReference Include="Chickensoft.LogicBlocks.DiagramGenerator" Version="5.12.0" PrivateAssets="all" OutputItemType="analyzer" />
     <PackageReference Include="SharpLSL" Version="0.0.10" />
     <PackageReference Include="SharpLSL.Native.win-x64" Version="1.16.2.5" />
   </ItemGroup>
